# gameLD58

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README  build_env.sh  build_env_web.sh  configure_cross.sh  configure_web.sh  crosscompile-web.txt  crosscompile.txt  main.cpp  meson.build  meson_options.txt
.github/workflows/: release.yml  tests.yml
assets/: atarian_22.fnt  atarian_26.fnt  atarian_30.fnt  backgrounds.json  base.json  base_best_price.txt  base_credits.txt  base_humans_captured.txt  base_levels_completed.txt  fps_24.fnt  game.json  human.json  humanoid.json  humanoid_2.json  humanoid_3.json  humanoid_4.json  humanoid_5.json  humanoid_6.json  known_fonts.json  level.json  level_captured.txt  level_time.txt  lorem_ipsum.txt  man.json  market.json  market_alien.txt  market_alien_reply.txt  market_credits.txt  market_humanoid.txt  market_receipt.txt  market_rules.json  multi_paragraph.fnt  multi_paragraph.txt  multi_paragraph_25.fnt  spineboy-pro.json  story_screen.json  story_screen.txt  story_screen_1.txt  story_screen_2.txt  story_screen_3.txt  (+8 more)
libs/: meson.build
libs/emscripten/: .clang-format  index.html  meson.build
libs/symphony_lite/: aa_rect2d.hpp  all_symphony.hpp  animated_sprite.hpp  audio.hpp  bm_font_loader.hpp  formatted_text.hpp  formatted_text_test.cpp  log.hpp  measured_text.hpp  measured_text_test.cpp  meson.build  point2d.hpp  text.hpp  transformation_matrix3d.hpp  utf8.hpp  vector2d.hpp  vector3d.hpp  wave_loader.hpp
libs/symphony_lite/tests/: aa_rect2d_test.cpp  formatted_text_test.cpp  meson.build  point2d_test.cpp  ray_casting_projection_test.cpp  segment2d_test.cpp  transformation_matrix3d_test.cpp  vector2d_test.cpp
libs/vlog/: meson.build  vlog.h
src/: all_audio.hpp  base_screen.hpp  consts.hpp  defeat_screen.hpp  demo.hpp  draw_texture.hpp  fade_image.hpp  game.hpp  human.hpp  keyboard.hpp  level.hpp  main.cpp  market_rules.hpp  market_screen.hpp  meson.build  paralax_renderer.hpp  quit_dialog.hpp  spine_sdl3.cpp  spine_sdl3.h  story_screen.hpp  title_screen.hpp  ufo.hpp  utils.hpp  victory_screen.hpp
symphony_lite/: aa_rect2d.hpp  aa_rect2d_test.cpp  all_symphony.hpp  audio.hpp  audio_utils.hpp  bm_font_loader.hpp  font.hpp  formatted_text.hpp  formatted_text_loader.hpp  formatted_text_loader_test.cpp  formatted_text_test.cpp  measured_text.hpp  meson.build  point3d.hpp  segment2d.hpp  text.hpp  utf8.hpp  vector2d.hpp  wav_loader.hpp  wave_loader.hpp
