symphony_lite_dep = declare_dependency(include_directories: '..', dependencies: [])

tests_srcs = [
    meson.current_source_dir() / 'aa_rect2d_test.cpp',
    meson.current_source_dir() / 'point2d_test.cpp',
    meson.current_source_dir() / 'ray_casting_projection_test.cpp',
    meson.current_source_dir() / 'segment2d_test.cpp',
    meson.current_source_dir() / 'transformation_matrix3d_test.cpp',
    meson.current_source_dir() / 'vector2d_test.cpp',
]
